{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 166,
  "lineage": "56774f4e-4560-1d06-bf0c-a0d23f376ba4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "asia-static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.194.249.146",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-05-27T07:34:37.789-07:00",
            "description": "share ip part",
            "id": "projects/carbon-sensor-419900/regions/asia-east1/addresses/asia-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "asia-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "carbon-sensor-419900",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/asia-east1/addresses/asia-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "europe-static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.228.83.142",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-05-27T07:34:37.321-07:00",
            "description": "share ip part",
            "id": "projects/carbon-sensor-419900/regions/europe-north1/addresses/euro-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "euro-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "carbon-sensor-419900",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/europe-north1/addresses/euro-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_port_3389",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-27T07:34:40.654-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/carbon-sensor-419900/global/firewalls/allow-port-3389",
            "log_config": [],
            "name": "allow-port-3389",
            "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath",
            "priority": 1000,
            "project": "carbon-sensor-419900",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/firewalls/allow-port-3389",
            "source_ranges": [
              "192.168.4.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.narrowpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_port_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-27T07:34:39.565-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/carbon-sensor-419900/global/firewalls/allow-port-80",
            "log_config": [],
            "name": "allow-port-80",
            "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath",
            "priority": 1000,
            "project": "carbon-sensor-419900",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/firewalls/allow-port-80",
            "source_ranges": [
              "172.16.1.0/24",
              "172.16.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.narrowpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_port_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2024-05-27T07:34:37.097-07:00",
            "deny": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "udp"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/carbon-sensor-419900/global/firewalls/deny-port-22",
            "log_config": [],
            "name": "deny-port-22",
            "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath",
            "priority": 1000,
            "project": "carbon-sensor-419900",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/firewalls/deny-port-22",
            "source_ranges": [
              "0.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.narrowpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_port_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2024-05-27T07:34:36.558-07:00",
            "deny": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/carbon-sensor-419900/global/firewalls/deny-port-80",
            "log_config": [],
            "name": "deny-port-80",
            "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath",
            "priority": 1000,
            "project": "carbon-sensor-419900",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/firewalls/deny-port-80",
            "source_ranges": [
              "0.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.narrowpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "asia-udp4500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-27T07:35:03.804-07:00",
            "id": "projects/carbon-sensor-419900/regions/asia-east1/forwardingRules/asia-udp4500",
            "ip_address": "35.194.249.146",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "asia-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "carbon-sensor-419900",
            "recreate_closed_psc": false,
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/asia-east1/forwardingRules/asia-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/asia-east1/targetVpnGateways/asiavpn"
          },
          "dependencies": [
            "google_compute_address.asia-static",
            "google_compute_network.narrowpath",
            "google_compute_vpn_gateway.narrowgate2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "asia-udp500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-27T07:35:04.921-07:00",
            "id": "projects/carbon-sensor-419900/regions/asia-east1/forwardingRules/asia-udp500",
            "ip_address": "35.194.249.146",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "asia-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "carbon-sensor-419900",
            "recreate_closed_psc": false,
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/asia-east1/forwardingRules/asia-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/asia-east1/targetVpnGateways/asiavpn"
          },
          "dependencies": [
            "google_compute_address.asia-static",
            "google_compute_network.narrowpath",
            "google_compute_vpn_gateway.narrowgate2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "asia_esp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-27T07:35:04.826-07:00",
            "id": "projects/carbon-sensor-419900/regions/asia-east1/forwardingRules/asia-esp",
            "ip_address": "35.194.249.146",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "asia-esp",
            "network_tier": "PREMIUM",
            "project": "carbon-sensor-419900",
            "recreate_closed_psc": false,
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/asia-east1/forwardingRules/asia-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/asia-east1/targetVpnGateways/asiavpn"
          },
          "dependencies": [
            "google_compute_address.asia-static",
            "google_compute_network.narrowpath",
            "google_compute_vpn_gateway.narrowgate2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "europe-udp4500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-27T07:34:51.746-07:00",
            "id": "projects/carbon-sensor-419900/regions/europe-north1/forwardingRules/eu-udp4500",
            "ip_address": "35.228.83.142",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "eu-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "carbon-sensor-419900",
            "recreate_closed_psc": false,
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/europe-north1/forwardingRules/eu-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/europe-north1/targetVpnGateways/europevpn"
          },
          "dependencies": [
            "google_compute_address.europe-static",
            "google_compute_network.narrowpath",
            "google_compute_vpn_gateway.narrowgate1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "europe-udp500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-27T07:34:50.888-07:00",
            "id": "projects/carbon-sensor-419900/regions/europe-north1/forwardingRules/eu-udp500",
            "ip_address": "35.228.83.142",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "eu-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "carbon-sensor-419900",
            "recreate_closed_psc": false,
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/europe-north1/forwardingRules/eu-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/europe-north1/targetVpnGateways/europevpn"
          },
          "dependencies": [
            "google_compute_address.europe-static",
            "google_compute_network.narrowpath",
            "google_compute_vpn_gateway.narrowgate1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "europe_esp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-27T07:34:52.211-07:00",
            "id": "projects/carbon-sensor-419900/regions/europe-north1/forwardingRules/eu-esp",
            "ip_address": "35.228.83.142",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "eu-esp",
            "network_tier": "PREMIUM",
            "project": "carbon-sensor-419900",
            "recreate_closed_psc": false,
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/europe-north1/forwardingRules/eu-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/europe-north1/targetVpnGateways/europevpn"
          },
          "dependencies": [
            "google_compute_address.europe-static",
            "google_compute_network.narrowpath",
            "google_compute_vpn_gateway.narrowgate1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "asia-gamingunit",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "asia-gamingunit",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240515",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/zones/asia-east1-b/disks/asia-gamingunit"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/carbon-sensor-419900/zones/asia-east1-b/instances/asia-gamingunit",
            "instance_id": "1721328333045180178",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "startup-script": "#Thanks to Remo\n#!/bin/bash\n# Update and install Apache2\napt update\napt install -y apache2\n\n# Start and enable Apache2\nsystemctl start apache2\nsystemctl enable apache2\n\n# GCP Metadata server base URL and header\nMETADATA_URL=\"http://metadata.google.internal/computeMetadata/v1\"\nMETADATA_FLAVOR_HEADER=\"Metadata-Flavor: Google\"\n\n# Use curl to fetch instance metadata\nlocal_ipv4=$(curl -H \"${METADATA_FLAVOR_HEADER}\" -s \"${METADATA_URL}/instance/ne [...]
            },
            "metadata_fingerprint": "1oNlCbDVN-E=",
            "name": "asia-gamingunit",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.229.215.40",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/default",
                "network_ip": "10.140.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/asia-east1/subnetworks/default",
                "subnetwork_project": "carbon-sensor-419900"
              }
            ],
            "project": "carbon-sensor-419900",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/zones/asia-east1-b/instances/asia-gamingunit",
            "service_account": [
              {
                "email": "97471215715-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "asia-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "europegaminghq",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "europegaminghq",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20240516",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 150,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/zones/europe-north1-a/disks/europegaminghq"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/carbon-sensor-419900/zones/europe-north1-a/instances/europegaminghq",
            "instance_id": "1629826936726955239",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "lemCUSSrlSM=",
            "name": "europegaminghq",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.217.18.132",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath",
                "network_ip": "10.17.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/europe-north1/subnetworks/narrowsub1",
                "subnetwork_project": "carbon-sensor-419900"
              }
            ],
            "project": "carbon-sensor-419900",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/zones/europe-north1-a/instances/europegaminghq",
            "service_account": [
              {
                "email": "97471215715-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "europe-north1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "narrowpath",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/carbon-sensor-419900/global/networks/thenarrowpath",
            "mtu": 0,
            "name": "thenarrowpath",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "195619219222449330",
            "project": "carbon-sensor-419900",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-27T07:34:37.530-07:00",
            "description": "Europe HQ",
            "encrypted_interconnect_router": false,
            "id": "projects/carbon-sensor-419900/regions/europe-north1/routers/vpn-router1",
            "name": "vpn-router1",
            "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath",
            "project": "carbon-sensor-419900",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/europe-north1/routers/vpn-router1"
          },
          "dependencies": [
            "google_compute_network.narrowpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-27T07:34:37.794-07:00",
            "description": "Asian Pacific",
            "encrypted_interconnect_router": false,
            "id": "projects/carbon-sensor-419900/regions/asia-east1/routers/vpn-router2",
            "name": "vpn-router2",
            "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath",
            "project": "carbon-sensor-419900",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/asia-east1/routers/vpn-router2"
          },
          "dependencies": [
            "google_compute_network.narrowpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "narrowpath_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-26T19:40:20.609-07:00",
            "description": "Finland-European Gaming Company",
            "gateway_address": "10.17.1.1",
            "id": "projects/carbon-sensor-419900/regions/europe-north1/subnetworks/narrowsub1",
            "ip_cidr_range": "10.17.1.0/24",
            "name": "narrowsub1",
            "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "carbon-sensor-419900",
            "purpose": "PRIVATE",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/europe-north1/subnetworks/narrowsub1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.narrowpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "narrowpath_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-27T07:34:48.911-07:00",
            "description": "North America-SouthCarolina",
            "gateway_address": "172.16.7.1",
            "id": "projects/carbon-sensor-419900/regions/us-east1/subnetworks/narrowsub2",
            "ip_cidr_range": "172.16.7.0/24",
            "name": "narrowsub2",
            "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "carbon-sensor-419900",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/us-east1/subnetworks/narrowsub2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.narrowpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "narrowpath_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-27T07:34:39.114-07:00",
            "description": "South America-Sao Paulo",
            "gateway_address": "172.16.9.1",
            "id": "projects/carbon-sensor-419900/regions/southamerica-east1/subnetworks/narrowsub3",
            "ip_cidr_range": "172.16.9.0/24",
            "name": "narrowsub3",
            "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "carbon-sensor-419900",
            "purpose": "PRIVATE",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/southamerica-east1/subnetworks/narrowsub3",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.narrowpath"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "narrowpath_subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-27T07:34:38.093-07:00",
            "description": "Taiwan",
            "gateway_address": "192.168.9.1",
            "id": "projects/carbon-sensor-419900/regions/asia-east1/subnetworks/narrowsub4",
            "ip_cidr_range": "192.168.9.0/24",
            "name": "narrowsub4",
            "network": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/global/networks/thenarrowpath",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "carbon-sensor-419900",
            "purpose": "PRIVATE",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbon-sensor-419900/regions/asia-east1/subnetworks/narrowsub4",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.narrowpath"
          ]
        }
      ]
    }
  ]
}